--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -5,7 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Модуль 3 - Домашнее задание</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <h1 class="visually-hidden">Main page</h1>
+
+    <div class="wrapper">
+        <header class="page-header">
+            <nav>
+                <ul class="site-navigation">
+                    <li class="site-navigation-item"><a href="#">lifestyle</a></li>
+                    <li class="site-navigation-item"><a href="#">photodiary</a></li>
+                    <li class="site-navigation-item"><a href="#">music</a></li>
+                    <li class="site-navigation-item"><a href="#">travel</a></li>
+                </ul>
+            </nav>
+        </header>
+
+   <main>
+       <!--Features section-->
+       <section>
+           <h2 class="visually-hidden">Our features</h2>
+           <ul class="features">
+               <li class="fatures-item-left">
+                   <img class="features-image" src="img/image-1.jpg" alt="lifestyle image 1" width="420" height="280">
+                   <p class="features-name">lifestyle</p>
+                   <h3>More than just a music festival</h3>
+                   <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+               </li>
+               <li class="fatures-item-right">
+                   <img class="features-image" src="img/image-2.jpg" alt="lifestyle image 2" width="419" height="280">
+                   <p class="features-name">lifestyle</p>
+                   <h3>Life tastes better with coffee</h3>
+                   <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+               </li>
+               <li class="fatures-item-left">
+                   <img class="features-image" src="img/image-3.jpg" alt="photodiary image 3" width="420" height="280">
+                   <p class="features-name">photodiary</p>
+                   <h3>American dream</h3>
+                   <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+               </li>
+               <li class="fatures-item-right">
+                   <img class="features-image" src="img/image-4.jpg" alt="photodiary image 4" width="419" height="280">
+                   <p class="features-name">photodiary</p>
+                   <h3>A day exploring the Alps</h3>
+                   <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+               </li>
+               <li class="fatures-item-left">
+                   <img class="fatures-item-left" src="img/image-5.jpg" alt="lifestyle image 5" width="420" height="280">
+                   <p class="features-name">lifestyle</p>
+                   <h3>Top 10 song for running</h3>
+                   <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+               </li>
+               <li class="fatures-item-right">
+                   <img class="features-image-right" src="img/image-6.jpg" alt="lifestyle image 6" width="419" height="280">
+                   <p class="features-name">lifestyle</p>
+                   <h3>Cold winter days</h3>
+                   <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+               </li>
+           </ul>
+       </section>
+   </main>
+   <footer>
+        <button>Load more</button>
+    </footer>
+</div>
+
 </body>
 </html>
