commit new files into the folder module-03 - part 2

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -12,8 +12,6 @@
 </head>
 <body>
 
-    <h1 class="visually-hidden">Main page</h1>
-
     <div class="wrapper">
         <header class="page-header">
             <nav>
@@ -31,47 +29,47 @@
        <section>
            <h2 class="visually-hidden">Our features</h2>
            <ul class="features">
-               <li class="fatures-item-left">
+               <li class="features-item">
                    <img class="features-image" src="img/image-1.jpg" alt="lifestyle image 1" width="420" height="280">
                    <p class="features-name">lifestyle</p>
                    <h3>More than just a music festival</h3>
                    <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                </li>
-               <li class="fatures-item-right">
+               <li class="features-item">
                    <img class="features-image" src="img/image-2.jpg" alt="lifestyle image 2" width="419" height="280">
                    <p class="features-name">lifestyle</p>
                    <h3>Life tastes better with coffee</h3>
                    <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                </li>
-               <li class="fatures-item-left">
+               <li class="features-item">
                    <img class="features-image" src="img/image-3.jpg" alt="photodiary image 3" width="420" height="280">
                    <p class="features-name">photodiary</p>
                    <h3>American dream</h3>
                    <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                </li>
-               <li class="fatures-item-right">
+               <li class="features-item">
                    <img class="features-image" src="img/image-4.jpg" alt="photodiary image 4" width="419" height="280">
                    <p class="features-name">photodiary</p>
                    <h3>A day exploring the Alps</h3>
                    <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                </li>
-               <li class="fatures-item-left">
-                   <img class="fatures-item-left" src="img/image-5.jpg" alt="lifestyle image 5" width="420" height="280">
+               <li class="features-item">
+                   <img class="features-image" src="img/image-5.jpg" alt="lifestyle image 5" width="420" height="280">
                    <p class="features-name">lifestyle</p>
                    <h3>Top 10 song for running</h3>
                    <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                </li>
-               <li class="fatures-item-right">
-                   <img class="features-image-right" src="img/image-6.jpg" alt="lifestyle image 6" width="419" height="280">
+               <li class="features-item">
+                   <img class="features-image" src="img/image-6.jpg" alt="lifestyle image 6" width="419" height="280">
                    <p class="features-name">lifestyle</p>
                    <h3>Cold winter days</h3>
                    <p class="features-announcement">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                </li>
            </ul>
-       </section>
+        </section>
+            <button class="btn">Load more</button>
    </main>
    <footer>
-        <button>Load more</button>
     </footer>
 </div>
 
