commit new files into the folder module-03 - part 4

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -67,7 +67,10 @@
                </li>
            </ul>
         </section>
+        <div class="button-block">
             <button class="btn">Load more</button>
+        </div>
+
    </main>
    <footer>
     </footer>
