--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -30,92 +30,99 @@
    <main class="container">
        <!--Featured products section-->
        <section class="featured-products">
-           <h2>Featured products</h2>
+           <h2 class="sectoin-header">Featured products</h2>
            <ul class="features-list clearfix">
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-1.jpg" alt="Blue tshirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Blue tshirt</p>
-                        <p class="features-list-price">$26</p>   
+                        <p class="features-list-price">&#36;26</p>   
                     </div>
                 </li>
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-2.jpg" alt="Woman shirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Woman shirt</p>
-                        <p class="features-list-price">$31</p>   
+                        <p class="features-list-price">&#36;31</p>   
                     </div>
                 </li>
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-3.jpg" alt="Yellow tshirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Yellow tshirt</p>
-                        <p class="features-list-price">$21</p>   
+                        <p class="features-list-price">&#36;21</p>   
                     </div>
                 </li>
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-4.jpg" alt="Cool lingerie" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Cool lingerie</p>
-                        <p class="features-list-price">$56</p>   
+                        <p class="features-list-price">&#36;56</p>   
                     </div>
                 </li>
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-5.jpg" alt="Blue tshirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Blue tshirt</p>
-                        <p class="features-list-price">$26</p>   
+                        <p class="features-list-price">&#36;26</p>   
                     </div>
                 </li>
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-6.jpg" alt="Woman shirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Woman shirt</p>
-                        <p class="features-list-price">$31</p>   
+                        <p class="features-list-price">&#36;31</p>   
                     </div>
                 </li>
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-7.jpg" alt="Yellow tshirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Yellow tshirt</p>
-                        <p class="features-list-price">$21</p>   
+                        <p class="features-list-price">&#36;21</p>   
                     </div>
                 </li>
                 <li class="features-list-item">
                     <img class="features-list-image" src="img/product-8.jpg" alt="Cool lingerie" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Cool lingerie</p>
-                        <p class="features-list-price">$56</p>   
+                        <p class="features-list-price">&#36;56</p>   
                     </div>
                 </li>
            </ul>
         </section>
        <!--Latest news section-->
         <section class="news">
-            <h2>Latest news</h2>
+            <h2 class="sectoin-header">Latest news</h2>
             <ul class="latest-news clearfix">
                 <li class="latest-news-item">
                     <img class="latest-news-image" src="img/news-1.jpg" alt="News image" width="350" height="261">
-                    <div class="latest-news-descr clearfix">
+                    <div class="clearfix">
                         <p class="latest-news-heder">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                         <p class="latest-news-announcement">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
-                        <button class="btn">Read more</button>   
-                    </div>
+                        <!--<button class="btn">Read more</button>-->  
+                        <div class="btn">
+                            <a href="#">Read more</a>   
+                        </div>
                 </li>
                 <li class="latest-news-item">
                         <img class="latest-news-image" src="img/news-2.jpg" alt="News image" width="347" height="262">
-                        <div class="latest-news-descr clearfix">
+                        <div class="clearfix">
                             <p class="latest-news-heder">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                             <p class="latest-news-announcement">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
-                            <button class="btn">Read more</button>   
-                        </div>
+                            <!--<button class="btn">Read more</button>-->  
+                            <div class="btn">
+                                <a href="#">Read more</a> 
+                            </div>
                     </li>
                 <li class="latest-news-item">
                         <img class="latest-news-image" src="img/news-3.jpg" alt="News image" width="347" height="261">
-                        <div class="latest-news-descr clearfix">
+                        <div class="clearfix">
                             <p class="latest-news-heder">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                             <p class="latest-news-announcement">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
-                            <button class="btn">Read more</button>   
+                            <!--<button class="btn">Read more</button>-->  
+                            <div class="btn">
+                                <a href="#">Read more</a>
+                            </div>  
                         </div>
                     </li>
             </ul>
