commit new files into the folder module-04 - part 3

--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -103,6 +103,7 @@
                         <div class="btn">
                             <a href="#">Read more</a>   
                         </div>
+                    </div>
                 </li>
                 <li class="latest-news-item">
                         <img class="latest-news-image" src="img/news-2.jpg" alt="News image" width="347" height="262">
@@ -113,6 +114,7 @@
                             <div class="btn">
                                 <a href="#">Read more</a> 
                             </div>
+                        </div>
                     </li>
                 <li class="latest-news-item">
                         <img class="latest-news-image" src="img/news-3.jpg" alt="News image" width="347" height="261">
