commit new files into the folder module-05 - part 2

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 
-    <div class="wrapper">
         <header class="page-header container">
             <nav>
                 <a href="#" class="site-logo">Mart</a>
@@ -30,8 +29,8 @@
     <!-- SLIDER -->
   <div class="slider">
     <div class="slider-title container">
-        <button class="slider-ctrl slider-ctrl-prev">&lt;</button>
-        <button class="slider-ctrl slider-ctrl-next">&gt;</button>
+        <button class="slider-ctrl slider-ctrl-prev"></button>
+        <button class="slider-ctrl slider-ctrl-next"></button>
       <ul class="slides-list">
         <li class="slides-item">
           <p class="slides-title">Affordable paris tours</p>
@@ -43,21 +42,17 @@
 
 
     <!--Featured products section-->
-       <section class="featured-products">
+       <section class="featured-products container">
            <h2 class="sectoin-header">Featured products</h2>
            <ul class="features-list clearfix">
                 <li class="features-list-item">
                     <div class="overlay">
                             <ul class="social-icons">
-                                    <li><a href="#"><img src="img/heart.png" alt="heart" width="26" height="23"></a></li>
-                                    <li><a href="#"><img src="img/but.png" alt="heart" width="26" height="22"></a></li>
-                                    <li><a href="#"><img src="img/clock.png" alt="heart" width="24" height="25"></a></li>
-                                    <li>
-                                        <button class="card-button">
-                                            <span class="visually-hidden">Add to cart</span>
-                                        </button>
-                                    </li>
-                                  </ul>
+                                <li><a href="#" class="social-icons-item-1"></a></li>
+                                <li><a href="#" class="social-icons-item-2"></a></li>
+                                <li><a href="#" class="social-icons-item-3"></a></li>
+                                <li><a href="#" class="cart-button">Add to cart</a></li>
+                            </ul>
                     </div>
                     <img class="features-list-image" src="img/item-1.jpg" alt="Blue tshirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
@@ -94,7 +89,6 @@
             All Rights Reserved © Dokan | <span class="footer-colored-text">Designed ThemenGraph</span>
         </p>
     </footer>
-    </div>
 
 </body>
 </html>
