--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -42,7 +42,7 @@
 
 
     <!--Featured products section-->
-       <section class="featured-products container">
+       <section class="featured-products">
            <h2 class="sectoin-header">Featured products</h2>
            <ul class="features-list clearfix">
                 <li class="features-list-item">
@@ -61,6 +61,14 @@
                     </div>
                 </li>
                 <li class="features-list-item">
+                        <div class="overlay">
+                                <ul class="social-icons">
+                                    <li><a href="#" class="social-icons-item-1"></a></li>
+                                    <li><a href="#" class="social-icons-item-2"></a></li>
+                                    <li><a href="#" class="social-icons-item-3"></a></li>
+                                    <li><a href="#" class="cart-button">Add to cart</a></li>
+                                </ul>
+                        </div>
                     <img class="features-list-image" src="img/item-2.jpg" alt="Woman shirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Woman shirt</p>
@@ -68,6 +76,14 @@
                     </div>
                 </li>
                 <li class="features-list-item">
+                        <div class="overlay">
+                                <ul class="social-icons">
+                                    <li><a href="#" class="social-icons-item-1"></a></li>
+                                    <li><a href="#" class="social-icons-item-2"></a></li>
+                                    <li><a href="#" class="social-icons-item-3"></a></li>
+                                    <li><a href="#" class="cart-button">Add to cart</a></li>
+                                </ul>
+                        </div>
                     <img class="features-list-image" src="img/item-3.jpg" alt="Yellow tshirt" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Yellow tshirt</p>
@@ -75,6 +91,14 @@
                     </div>
                 </li>
                 <li class="features-list-item">
+                        <div class="overlay">
+                                <ul class="social-icons">
+                                    <li><a href="#" class="social-icons-item-1"></a></li>
+                                    <li><a href="#" class="social-icons-item-2"></a></li>
+                                    <li><a href="#" class="social-icons-item-3"></a></li>
+                                    <li><a href="#" class="cart-button">Add to cart</a></li>
+                                </ul>
+                        </div>
                     <img class="features-list-image" src="img/item-4.jpg" alt="Cool lingerie" width="255" height="322">
                     <div class="features-list-descr clearfix">
                         <p class="features-list-name">Cool lingerie</p>
