commit new files into the folder module-05 - part 4

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -51,7 +51,7 @@
                                 <li><a href="#" class="social-icons-item-1"></a></li>
                                 <li><a href="#" class="social-icons-item-2"></a></li>
                                 <li><a href="#" class="social-icons-item-3"></a></li>
-                                <li><a href="#" class="cart-button">Add to cart</a></li>
+                                <li><a href="#" class="cart-button"></a></li>
                             </ul>
                     </div>
                     <img class="features-list-image" src="img/item-1.jpg" alt="Blue tshirt" width="255" height="322">
@@ -66,7 +66,7 @@
                                     <li><a href="#" class="social-icons-item-1"></a></li>
                                     <li><a href="#" class="social-icons-item-2"></a></li>
                                     <li><a href="#" class="social-icons-item-3"></a></li>
-                                    <li><a href="#" class="cart-button">Add to cart</a></li>
+                                    <li><a href="#" class="cart-button"></a></li>
                                 </ul>
                         </div>
                     <img class="features-list-image" src="img/item-2.jpg" alt="Woman shirt" width="255" height="322">
@@ -81,7 +81,7 @@
                                     <li><a href="#" class="social-icons-item-1"></a></li>
                                     <li><a href="#" class="social-icons-item-2"></a></li>
                                     <li><a href="#" class="social-icons-item-3"></a></li>
-                                    <li><a href="#" class="cart-button">Add to cart</a></li>
+                                    <li><a href="#" class="cart-button"></a></li>
                                 </ul>
                         </div>
                     <img class="features-list-image" src="img/item-3.jpg" alt="Yellow tshirt" width="255" height="322">
@@ -96,7 +96,7 @@
                                     <li><a href="#" class="social-icons-item-1"></a></li>
                                     <li><a href="#" class="social-icons-item-2"></a></li>
                                     <li><a href="#" class="social-icons-item-3"></a></li>
-                                    <li><a href="#" class="cart-button">Add to cart</a></li>
+                                    <li><a href="#" class="cart-button"></a></li>
                                 </ul>
                         </div>
                     <img class="features-list-image" src="img/item-4.jpg" alt="Cool lingerie" width="255" height="322">
@@ -109,9 +109,11 @@
         </section>
     </main>
     <footer>
-        <p class="footer-text">
-            All Rights Reserved © Dokan | <span class="footer-colored-text">Designed ThemenGraph</span>
-        </p>
+        <div class="footer container">
+            <p class="footer-text">
+                All Rights Reserved &copy; Dokan | <a href="#" class="footer-colored-link">Designed ThemenGraph</a>
+            </p>
+        </div>
     </footer>
 
 </body>
