commit new files into the folder module-05 - part 5

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -48,10 +48,10 @@
                 <li class="features-list-item">
                     <div class="overlay">
                             <ul class="social-icons">
-                                <li><a href="#" class="social-icons-item-1"></a></li>
-                                <li><a href="#" class="social-icons-item-2"></a></li>
-                                <li><a href="#" class="social-icons-item-3"></a></li>
-                                <li><a href="#" class="cart-button"></a></li>
+                                <li><a href="#" class="social-icons-item-1"><span class="visually-hidden"></span></a></li>
+                                <li><a href="#" class="social-icons-item-2"><span class="visually-hidden"></span></a></li>
+                                <li><a href="#" class="social-icons-item-3"><span class="visually-hidden"></span></a></li>
+                                <li><a href="#" class="cart-button"><span class="visually-hidden"></span></a></li>
                             </ul>
                     </div>
                     <img class="features-list-image" src="img/item-1.jpg" alt="Blue tshirt" width="255" height="322">
@@ -63,10 +63,10 @@
                 <li class="features-list-item">
                         <div class="overlay">
                                 <ul class="social-icons">
-                                    <li><a href="#" class="social-icons-item-1"></a></li>
-                                    <li><a href="#" class="social-icons-item-2"></a></li>
-                                    <li><a href="#" class="social-icons-item-3"></a></li>
-                                    <li><a href="#" class="cart-button"></a></li>
+                                    <li><a href="#" class="social-icons-item-1"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="social-icons-item-2"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="social-icons-item-3"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="cart-button"><span class="visually-hidden"></span></a></li>
                                 </ul>
                         </div>
                     <img class="features-list-image" src="img/item-2.jpg" alt="Woman shirt" width="255" height="322">
@@ -78,10 +78,10 @@
                 <li class="features-list-item">
                         <div class="overlay">
                                 <ul class="social-icons">
-                                    <li><a href="#" class="social-icons-item-1"></a></li>
-                                    <li><a href="#" class="social-icons-item-2"></a></li>
-                                    <li><a href="#" class="social-icons-item-3"></a></li>
-                                    <li><a href="#" class="cart-button"></a></li>
+                                    <li><a href="#" class="social-icons-item-1"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="social-icons-item-2"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="social-icons-item-3"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="cart-button"><span class="visually-hidden"></span></a></li>
                                 </ul>
                         </div>
                     <img class="features-list-image" src="img/item-3.jpg" alt="Yellow tshirt" width="255" height="322">
@@ -93,10 +93,10 @@
                 <li class="features-list-item">
                         <div class="overlay">
                                 <ul class="social-icons">
-                                    <li><a href="#" class="social-icons-item-1"></a></li>
-                                    <li><a href="#" class="social-icons-item-2"></a></li>
-                                    <li><a href="#" class="social-icons-item-3"></a></li>
-                                    <li><a href="#" class="cart-button"></a></li>
+                                    <li><a href="#" class="social-icons-item-1"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="social-icons-item-2"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="social-icons-item-3"><span class="visually-hidden"></span></a></li>
+                                    <li><a href="#" class="cart-button"><span class="visually-hidden"></span></a></li>
                                 </ul>
                         </div>
                     <img class="features-list-image" src="img/item-4.jpg" alt="Cool lingerie" width="255" height="322">
