commit new files into the folder module-06 - part 2

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -11,9 +11,9 @@
 </head>
 
         <body>
-                <header class="masthead container">
+                <header class="masthead">
                   <nav class="mastnav container">
-                    <a href="#" class="logo masthead-logo">MoGo</a>
+                    <a href="#" class="mast-logo">MoGo</a>
                     <ul class="site-nav">
                       <li><a href="#">About</a></li>
                       <li><a href="#">Service</a></li>
@@ -28,7 +28,7 @@
          <!-- SERVICES SECTION -->
         <section class="services container section">
           <div class="services-header header">
-            <span class="header-caption">We work with</span>
+            <p class="header-caption">We work with</p>
             <h2 class="header-title">Amazing Services</h2>
           </div>
 
@@ -76,7 +76,7 @@
         <!-- TEAM SECTION -->
         <section class="team container section">
                 <div class="team-header header">
-                  <span class="header-caption">Who we are</span>
+                  <p class="header-caption">Who we are</p>
                   <h2 class="header-title">Meet our team</h2>
                   <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -134,7 +134,7 @@
                                   </div>
                               </li>
                 </ul>
-              </section>
+        </section>
     </main>
       <!-- FOOTER -->
   <footer>
