commit new files into the folder module-01 - part 1

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Домашнее задание - модуль 7</title>
-  <link href="https://fonts.googleapis.com/css?family=Italianno&amp;Montserrat:400,700&amp;Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -76,10 +76,10 @@
             <div class="contact-form-imput-1">
               <input type="text" name="name" placeholder="your name *" required>
               <input type="email" name="email" placeholder="your email *" required>
-              <input class="input-last-child" type="text" name="subject" placeholder="subject">
+              <input class="input-subject" type="text" name="subject" placeholder="subject">
             </div>
             <div class="contact-form-imput-2">
-              <textarea name="body" rows="10" cols="24" placeholder="your message *" required></textarea>
+              <textarea type="text" name="body" rows="10" cols="24" placeholder="your message *" required></textarea>
             </div>
           </div>
            
