commit new files into the folder module-01 - part 2

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -29,11 +29,11 @@
         <h1 class="visually-hidden">Main page</h1>
 
   <!-- SERVICES -->
-    <section class="services container">
-      <div class="services-header">
+    <section class="section services container">
+      <header class="services-header">
         <h2 class="services-header-title">Services</h2>
         <p class="services-header-text">Proin iaculis purus consequat sem cure.</p>
-      </div>
+      </header>
 
       <ul class="services-list">
         <!-- CARD -->
@@ -64,12 +64,12 @@
 
   <!-- CONTACT -->
 
-    <section class="contact">
+    <section class="section contact">
       <div class="container">
-        <div class="contact-header">
+        <header class="contact-header">
             <h2 class="contact-header-title">Contact us</h2>
             <p class="contact-header-text">Proin iaculis purus consequat sem cure.</p>
-        </div>
+        </header>
 
         <form class="contact-form">
             <div class="contact-form-imput">
@@ -78,10 +78,8 @@
               <input type="email" name="email" placeholder="your email *" required>
               <input class="input-subject" type="text" name="subject" placeholder="subject">
             </div>
-            <div class="contact-form-imput-2">
-              <textarea type="text" name="body" rows="10" cols="24" placeholder="your message *" required></textarea>
+              <textarea name="body" rows="10" cols="24" placeholder="your message *" required></textarea>
             </div>
-          </div>
            
               <button class="contact-form-btn" type="submit">Send Message</button>
             
