commit new files into the folder module-06 - part 3

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -27,10 +27,10 @@
 
          <!-- SERVICES SECTION -->
         <section class="services container section">
-          <div class="services-header header">
+          <header class="services-header section-header">
             <p class="header-caption">We work with</p>
             <h2 class="header-title">Amazing Services</h2>
-          </div>
+          </header>
 
                 <!-- SERVICES CARDS -->
       <ul class="services-list">
@@ -75,14 +75,14 @@
 
         <!-- TEAM SECTION -->
         <section class="team container section">
-                <div class="team-header header">
+                <header class="team-header section-header">
                   <p class="header-caption">Who we are</p>
                   <h2 class="header-title">Meet our team</h2>
                   <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                     nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                   </p>
-                </div>
+                </header>
 
 
                 <ul class="team-list clearfix">
@@ -95,7 +95,7 @@
                                   <li><a href="#" class="social-icons-item-4"><span class="visually-hidden"></span></a></li>
                                               </ul>
                                       </div>
-                                      <img src="img/Layer-16.jpg" alt="Graphic designer" width="380" height="470">
+                                      <img class="team-member-photo" src="img/Layer-16.jpg" alt="Graphic designer" width="380" height="470">
                                       <div class="team-member clearfix">
                                         <p class="team-member-name">Matthew Dix</p>
                                         <p class="team-member-position">Graphic designer</p>
@@ -111,7 +111,7 @@
                                 <li><a href="#" class="social-icons-item-4"><span class="visually-hidden"></span></a></li>
                                             </ul>
                                     </div>
-                                    <img src="img/Layer-19.jpg" alt="Branding/UX design" width="380" height="470">
+                                    <img class="team-member-photo" src="img/Layer-19.jpg" alt="Branding/UX design" width="380" height="470">
                                     <div class="team-member clearfix">
                                       <p class="team-member-name">Christopher Campbell</p>
                                       <p class="team-member-position">Branding/UX design</p>
@@ -127,7 +127,7 @@
                               <li><a href="#" class="social-icons-item-4"><span class="visually-hidden"></span></a></li>
                                           </ul>
                                   </div>
-                                  <img src="img/Layer-18.jpg" alt="Developer" width="380" height="470">
+                                  <img class="team-member-photo" src="img/Layer-18.jpg" alt="Developer" width="380" height="470">
                                   <div class="team-member clearfix">
                                     <p class="team-member-name">Michael Fertig</p>
                                     <p class="team-member-position">Developer</p>
