commit new files into the folder module-08 - part 4

--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <!-- MASTHEAD -->
-  <div class="masthead-wrapper">
+  <header class="header">
     <div class="container banner">
-      <header class="masthead">
+      <div class="masthead">
         <a href="#" class="logo">urlaubsglück</a>
         <nav>
         <ul class="nav">
@@ -27,20 +27,20 @@
           </li>
         </ul>
       </nav>
-      </header>
+    </div>
       <section class="home">
-        <h1 class="home-title">Share your holiday dreams</h1>
+        <h2 class="home-title">Share your holiday dreams</h2>
         <p class="home-slogan">And find the perfect partner to fullfill it</p>
         <a href="#" class="home-btn">Find your holiday partner</a>
       </section>
     </div>
-  </div>
+  </header>
 
   <!-- PARTNERS SECTION -->
   <div class="partners-wrapper">
     <section class="container partners">
       <header class="partners-header">
-        <h2 class="partners-header-title">Meet a partner for your best holiday</h2>
+        <h3 class="partners-header-title">Meet a partner for your best holiday</h3>
       </header>
 
       <ul class="partners-list">
@@ -48,49 +48,42 @@
         <li class="partners-list-item">
           <div class="partners-card">
             <div class="partners-card-photo icon-1">
-            <img class="partners-card-img" alt="Bradley Hunter" src="img/Layer_6.png">
+            <img class="partners-card-img" alt="Bradley Hunter" src="img/Layer_6.jpg" width="120" height="120">
             </div>
-            <div class="partners-card-content">
               <p class="partners-card-name">Bradley Hunter</p>
               <p class="partners-card-text">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
           </div>
         </li>
         <li class="partners-list-item">
           <div class="partners-card">
             <div class="partners-card-photo icon-2">
-                <img class="partners-card-img" alt="Heather Walker" src="img/Layer_7.png">
+                <img class="partners-card-img" alt="Heather Walker" src="img/Layer_7.jpg" width="120" height="120">
             </div>
-            <div class="partners-card-content">
                 <p class="partners-card-name">Heather Walker</p>
                 <p class="partners-card-text">I'm a happy person that loves cats and climbing on mountains.</p>
-              </div>
           </div>
         </li>
         <li class="partners-list-item">
           <div class="partners-card">
             <div class="partners-card-photo icon-3">
-            <img class="partners-card-img" alt="Lucas Marsha" src="img/Layer_8.png">
+            <img class="partners-card-img" alt="Lucas Marsha" src="img/Layer_8.jpg" width="120" height="120">
             </div>
-            <div class="partners-card-content">
                 <p class="partners-card-name">Lucas Marsha</p>
                 <p class="partners-card-text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
-              </div>
           </div>
         </li>
         <li class="partners-list-item">
           <div class="partners-card">
             <div class="partners-card-photo icon-4">
-            <img class="partners-card-img" alt="Bradley Hunter" src="img/Layer_9.png">
+            <img class="partners-card-img" alt="Bradley Hunter" src="img/Layer_9.jpg" width="120" height="120">
             </div>
-            <div class="partners-card-content">
               <p class="partners-card-name">Bradley Hunter</p>
               <p class="partners-card-text">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
           </div>
         </li>
       </ul>
-      <a href="#" class="partners-btn">See other partners</a>
+      <!--<a href="#" class="partners-btn">See other partners</a>-->
+      <button class="partners-btn">See other partners</button>
     </section>
   </div>
 
