commit new files into the folder module-08 - part 5

--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -27,7 +27,7 @@
           </li>
         </ul>
       </nav>
-    </div>
+     </div>
       <section class="home">
         <h2 class="home-title">Share your holiday dreams</h2>
         <p class="home-slogan">And find the perfect partner to fullfill it</p>
@@ -36,6 +36,7 @@
     </div>
   </header>
 
+  <main>
   <!-- PARTNERS SECTION -->
   <div class="partners-wrapper">
     <section class="container partners">
@@ -46,46 +47,39 @@
       <ul class="partners-list">
         <!-- PARTNERS LIST -->
         <li class="partners-list-item">
-          <div class="partners-card">
             <div class="partners-card-photo icon-1">
             <img class="partners-card-img" alt="Bradley Hunter" src="img/Layer_6.jpg" width="120" height="120">
             </div>
               <p class="partners-card-name">Bradley Hunter</p>
               <p class="partners-card-text">Based in Chicago. I love playing tennis and loud music.</p>
-          </div>
         </li>
         <li class="partners-list-item">
-          <div class="partners-card">
             <div class="partners-card-photo icon-2">
                 <img class="partners-card-img" alt="Heather Walker" src="img/Layer_7.jpg" width="120" height="120">
             </div>
                 <p class="partners-card-name">Heather Walker</p>
                 <p class="partners-card-text">I'm a happy person that loves cats and climbing on mountains.</p>
-          </div>
         </li>
         <li class="partners-list-item">
-          <div class="partners-card">
             <div class="partners-card-photo icon-3">
             <img class="partners-card-img" alt="Lucas Marsha" src="img/Layer_8.jpg" width="120" height="120">
             </div>
                 <p class="partners-card-name">Lucas Marsha</p>
                 <p class="partners-card-text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
-          </div>
         </li>
         <li class="partners-list-item">
-          <div class="partners-card">
             <div class="partners-card-photo icon-4">
             <img class="partners-card-img" alt="Bradley Hunter" src="img/Layer_9.jpg" width="120" height="120">
             </div>
               <p class="partners-card-name">Bradley Hunter</p>
               <p class="partners-card-text">Based in Chicago. I love playing tennis and loud music.</p>
-          </div>
         </li>
       </ul>
       <!--<a href="#" class="partners-btn">See other partners</a>-->
       <button class="partners-btn">See other partners</button>
     </section>
   </div>
+</main>
 
 </body>
 
