--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -14,8 +14,8 @@
 
 <body>
   <!-- MASTHEAD -->
-  <header class="page-header container">
-    <nav class="page-nav">
+  <header class="page-header">
+    <nav class="page-nav container">
         <ul class="site-nav">
           <li class="nav-item">
             <a href="#" class="nav-link">Log in</a>
@@ -26,7 +26,7 @@
         </ul>
         <a href="#" class="logo">urlaubsglück</a>
     </nav>
-	<section class="home">
+	<section class="home container">
         <h2 class="home-title">Share your holiday dreams</h2>
         <p class="home-slogan">And find the perfect partner to fullfill it</p>
         <a href="#" class="home-btn">Find your holiday partner</a>
